--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ body{
         padding: 20px 80px;
         background: #e3e6f3;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+        /* z-index: 999; */
+        position: sticky;
+        top: 0;
+        left: 0;
     }
     #navbar{
         display: flex;
@@ -84,9 +88,73 @@ body{
 /* ==========Header end */
 
 /* ==========Hero Start */
+    #hero{
+        background-image: url("../../img/hero4.png");
+        height: 90vh;
+        width: 100%;
+        background-position: top 25% right 0;
+        background-size: cover;
+        padding: 0 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    #hero h4{
+        padding-bottom: 15px;
+    }
+    #hero h1{
+        color: #088178;
+    }
+    #hero button{
+        background-image: url("../../img/button.png");
+        background-color: transparent;
+        color: #088178;
+        border: 0;
+        padding: 14px 80px 14px 65px;
+        background-repeat: no-repeat;
+        cursor: pointer;
+        font-weight: 700;
+        font-size: 15px;
+    }
+/* ==========Hero End============== */
+
+/* ==========Feature Start=========== */
+#feature{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
+}
+
+#feature .fe-box{
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    margin: 15px 0;
+}
+#feature .fe-box:hover{
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+#feature .fe-box h6{
+    display: block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178; 
+    background-color: #fddde4;
+}
+#feature .fe-box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
 
 
-/* ==========Hero End */
+
+
+
 
 
 
