--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -144,6 +144,23 @@
     #prodetails .single-pro-details{
         width: 100%;
     }
+    /* Blog page */
+    #blog{
+        padding: 100px 20px 0 20px;
+    }
+    #blog .blog-box{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    #blog .blog-img{
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 30px;
+    }
+    #blog .blog-details{
+        width: 100%;
+    }
 }
 
 
