--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -161,6 +161,24 @@
     #blog .blog-details{
         width: 100%;
     }
+
+    /* About Page */
+    #about-head{
+        flex-direction: column;
+    }
+    #about-head img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #about-head div{
+        padding-left: 0px;
+    }
+    #about-app .video{
+        width: 100%;
+    }
+
+
+
 }
 
 
