--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -80,7 +80,18 @@
     #newsletter .form{
         width: 70%;
     }
+
+    /* =====Contact Page====== */
+    #form-details{
+        padding: 40px;
+    }
+    #form-details form{
+        width: 50%;
+    }
 }
+
+
+
 
 @media (max-width: 477px){
     .section-p1{
@@ -177,7 +188,26 @@
         width: 100%;
     }
 
-
+    /* ====Contact Page===== */
+    #contact-details{
+        flex-direction: column;
+    }
+    #contact-details .details{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #contact-details .map{
+        width: 100%;
+    }
+    #form-details{
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+    #form-details form{
+        width: 100%;
+        margin-bottom: 30px;
+    }
 
 }
 
