--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -209,6 +209,18 @@
         margin-bottom: 30px;
     }
 
+    /* ====Cart Page===== */
+    #cart-add{
+        flex-direction: column;
+    }
+    #coupon{
+        width: 100%;
+    }
+    #subtotal{
+        width: 100%;
+        padding: 20px;
+    }
+
 }
 
 
